# AutomateStuff

./: requirements.txt  setup.cfg
fancytimers/classes/: __init__.py  fixed_scheduler.py  minimum_scheduler.py  scheduler.py
fancytimers/classes/concretes/: __init__.py  sql_mixin.py
src/classes/: fixed_scheduler.py  minimum_scheduler.py  recent_checker.py  scheduler.py
src/classes/concretes/: sql_mixin.py
