[metadata]
name = fancytimers
version = 0.0.1
author = Literal Genie
description = Fancy timers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LiteralGenie/FancyTimers
project_urls =
    Bug Tracker = https://github.com/LiteralGenie/FancyTimers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    sqlalchemy